Fixed margin spacing

--- a/app/assets/stylesheets/splash/login-form.scss
+++ b/app/assets/stylesheets/splash/login-form.scss
@@ -4,7 +4,7 @@
     height: 575px;
     margin: auto;
     background-color: white;
-    margin-top: 100px;
+    margin-top: 75px;
 }
 
 .login-content {
